--- a/about.qmd
+++ b/about.qmd
@@ -1,13 +1,33 @@
 ---
-title: "About"
+title: "About Me"
 ---
 
-Hello, I am Lexi! I am currently a student at Georgetown College majoring in marketing and minoring in Computer Science. 
+<style>
+.center 
+{
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 30% !important;
+}
+img
+{
+    border: 1px solid #000000 !important;
+}
+</style>
 
-## Early Life 
+<img src="/images/me.jpg" class="center" style="border-radius: 20%;">
 
-I am from Mt. Washinton, Kentucky. I have a sister that is two years older than me. I also have a cat named Binx.
+Hello, I am Lexi! I am currently a student at Georgetown College majoring in marketing and minoring in Computer Science. I am currently a senior, and plan to graduate this December of 2023. 
+
+
+## Early/ Present Life 
+<img src="/images/family.jpg" style="float: left; margin: 1px 10px 1px 0px;" width = 200>
+
+I am from a small town in Mt. Washington, Kentucky which is about 30 minutes away from Louisville. Throughout my younger years all the way up to college I played basketball which constantly kept me busy<img src="/images/binx.jpg" style="float: right; margin: 3px 0px 3px 12px;" width = 150>. Growing up I have lived in Mt Washington with my mom, dad and my sister. My sister is two years older than me and just recently got married in September. I also have a cat named Binx. I got him about two years ago from the humane society. In my free time I enjoy spending time with my friends and family, shopping, and going on walks.
+
+
 
 ## Future Life
 
-I plan on graduating this Decemeber. After I graduate Georgeotwn College I plan on pursuing a job in sales. Preferably I would like to do something that consists of medical sales. 
+After I graduate Georgeotwn College I plan on pursuing a job in sales. Preferably I would like to do something in the medical sales field. Although this is something I am very interested in now, I did not always know that was the path I wanted to take. Going into college I was unsure which route I wanted to pursue, but after taking some classes and experiencing new things marketing began to spark my interest. 
