--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 title: "warmup-lexi-taylor"
 ---
 
-This is a Quarto website.
+Welcome to my Warmup Website! 
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+You can read a bit about me [here](about.html).
+
