--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
-title: "warmup-lexi-taylor"
+title: "Welcome!"
 ---
 
-Welcome to my Warmup Website! 
+Welcome to my Warmup Website! This website serves as a personal website for myself that can be a starting point for a future website that I may design for myself or someone else one day. 
 
 You can read a bit about me [here](about.html).
 
