--- a/about.qmd
+++ b/about.qmd
@@ -24,7 +24,7 @@ Hello, I am Lexi! I am currently a student at Georgetown College majoring in mar
 ## Early/ Present Life 
 <img src="/images/family.jpg" style="float: left; margin: 1px 10px 1px 0px;" width = 200>
 
-I am from a small town in Mt. Washington, Kentucky which is about 30 minutes away from Louisville. Throughout my younger years all the way up to college I played basketball which constantly kept me busy<img src="/images/binx.jpg" style="float: right; margin: 3px 0px 3px 12px;" width = 150>. Growing up I have lived in Mt Washington with my mom, dad and my sister. My sister is two years older than me and just recently got married in September. I also have a cat named Binx. I got him about two years ago from the humane society. In my free time I enjoy spending time with my friends and family, shopping, and going on walks.
+I am from a small town in Mt. Washington, Kentucky which is about 30 minutes away from Louisville. Throughout my younger years all the way up to college I played basketball which constantly kept me busy<img src="/images/binx.jpg" style="float: right; margin: 3px 0px 3px 12px;" width = 150>. Growing up I have lived in Mt Washington with my mom, dad and my sister. My sister is two years older than me and just recently got married in September. I also have a cat named Binx. I got him about two years ago from the Lexington Humane Society. In my free time I enjoy spending time with my friends and family, shopping, and going on walks.
 
 
 
