--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Welcome!"
 ---
 
-Welcome to my Warmup Website! This website serves as a personal website for myself that can be a starting point for a future website that I may design for myself or someone else one day. 
+Welcome to my  Website Warmup! This website serves as a personal website for myself that can be a starting point for a future website that I may design for myself or someone else one day. 
 
 You can read a bit about me [here](about.html).
 
