--- a/articles/index.qmd
+++ b/articles/index.qmd
@@ -2,4 +2,4 @@
 title:  "Articles"
 ---
 
-The articles on this site are here to demonstrate how to properly solve two problems from the Eloquent Javascript book. These problems include the `Math.min` function and Recursion. 
+The articles on this site are here to demonstrate how to properly solve two problems from the Eloquent Javascript book. These problems include the `Math.min` Function and Recursion. 
