--- a/blog/index.qmd
+++ b/blog/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "My blog"
+title: "My Blog"
 listing:
   contents: posts
   sort: "date desc"
@@ -10,3 +10,4 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
+
