--- a/posts/2023-11-17-pink-parabolas/index.qmd
+++ b/posts/2023-11-17-pink-parabolas/index.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Green Turtles Make Peevish Pets"
-description: "Profound wisdom on turtles and the color green."
+title: "Pink Parabolas Make For the Merriest Mathematics"
+description: "Find the area of segments of pink parabolas."
 author:
-  - name: Homer White
-date: "2023-10-15"
-categories: [rants, animals, colors]
+  - name: Lexi Taylor
+date: "2022-11-17"
+categories: [math, colors]
 image: banner.jpg
 ---
 
