--- a/articles/article_02.qmd
+++ b/articles/article_02.qmd
@@ -50,7 +50,7 @@ console.log(isEven(50));
 console.log(isEven(75));
 console.log(isEven(-1));
 ```
-## Explanation:
+## Explanation
 ```.js
  isEven = function(number) {
     if (number == 0)
@@ -65,7 +65,7 @@ console.log(isEven(-1));
 ```
 This code creates a function that checks for evenness. If the number is equal to zero, then the function will immediately return true which indicates that zero is an even number. If the number is equal to one, the function returns false, which indicated one is an odd number. If none of these lines are true, it checks to see if number is less than zero. If the number is negative, it converts it to positive. Lastly, the function subtracts 2 from the number and continues the process until it reaches one. 
 
-## Test the Code:
+## Test the Code
 ```.js
 console.log(isEven(50));
 console.log(isEven(75));
