--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ about:
       url: "https://linkedin.com/in/alexis-taylor-b41a90293"
 ---
 
-Welcome to my  Website Warmup! This website serves as a personal website for myself that can be a starting point for a future website that I may design for myself or someone else one day. 
+Welcome to my  Website Warmup! This website serves as a personal website  that can be a starting point for a future website that I may design for myself or someone else one day. 
 
 You can read a bit about me [here](about.html).
 
