--- a/posts/2023-11-17-minor-enhancement/index.qmd
+++ b/posts/2023-11-17-minor-enhancement/index.qmd
@@ -23,10 +23,10 @@ As you can see in the image below, under the "Welcome!" there are two icons that
 
 ## How I Did It
 <blockquote>
-When making my enhancement I reffered back to the Quarto website [here](https://quarto.org/docs/websites/website-navigation.html). This website is a great resource when learning how to make a website in VS Code. The website provides an example of how to get the tools on the navbar. Instead of having my clickable icons on the navabr, I decided to add them to my home page. In order to do this under my `index.qmd` on VS Code I provided the code to get these icons. Below is the code I used. 
+When making my enhancement I reffered back to the Quarto website [here](https://quarto.org/docs/websites/website-navigation.html). This website is a great resource when learning how to make a website in VS Code. The website provides an example of how to get the tools on the navbar. Instead of having my clickable icons on the navabr; I decided to add them to my home page. In order to do this in my `index.qmd` on VS Code I provided the code to get these icons. Below is the code I used. 
 
 ```{.yml filename="_quarto.yml"}
-title: "Welcone!"
+title: "Welcome!"
 about:
   template: trestles
   links:
@@ -35,9 +35,7 @@ about:
       url: "https://github.com/lexitaylor5"
     - text: LinkedIn
       url: "https://linkedin.com/in/alexis-taylor-b41a90293"
----
 ```
 
-Since these icons are on my home page I decided to title them "Welcome!". The templates on this code can be whatever theme you want. The `link` part in this code is what the text is labeled as. The `icon` is what I want the imagae of the icon to be. The `url` is the actual link to both the pages. 
 
 </blockquote>
