--- a/index.qmd
+++ b/index.qmd
@@ -1,17 +1,33 @@
 ---
 title: "Welcome!"
+comments: False
+format:
+  html:
+    page-layout: full
+listing:
+  - id: landing-posts
+    contents: blog/posts
+    type: default
+    max-items: 3
+    sort: 
+      - "date desc"
+      - "title asc"
 about:
-  template: trestles
+  id: about-forbo7
+  template: jolla
   links:
-    - text: GitHub
-      icon: github
-      url: "https://github.com/lexitaylor5"
-    - text: LinkedIn
-      url: "https://linkedin.com/in/alexis-taylor-b41a90293"
+      # Variables don't work here.
+    - icon: clipboard-data
+      text: LinkedIn
+      href: "https://linkedin.com/in/alexis-taylor-b41a90293"
+    - icon: github
+      text: GitHub
+      href: "https://github.com/lexitaylor5"
+back-to-top-navigation: false
 ---
 
-Welcome to my  Website Warmup! This website serves as a personal website  that can be a starting point for a future website that I may design for myself or someone else one day. 
+:::{#about-forbo7 .animate__animated .animate__zoomInDown}
+Welcome to my website! This website serves as a personal website that can be a starting point for a future website that I may design for myself or someone else one day. 
 
 You can read a bit about me [here](about.html).
-
-
+:::
