--- a/index.qmd
+++ b/index.qmd
@@ -4,16 +4,8 @@ comments: False
 format:
   html:
     page-layout: full
-listing:
-  - id: landing-posts
-    contents: blog/posts
-    type: default
-    max-items: 3
-    sort: 
-      - "date desc"
-      - "title asc"
 about:
-  id: about-forbo7
+  id: about
   template: jolla
   links:
       # Variables don't work here.
@@ -31,3 +23,4 @@ Welcome to my website! This website serves as a personal website that can be a s
 
 You can read a bit about me [here](about.html).
 :::
+
