--- a/index.qmd
+++ b/index.qmd
@@ -17,8 +17,7 @@ about:
       href: "https://github.com/lexitaylor5"
 back-to-top-navigation: false
 ---
-
-:::{#about-forbo7 .animate__animated .animate__zoomInDown}
+:::{#about .animate__animated .animate__zoomInDown}
 Welcome to my website! This website serves as a personal website that can be a starting point for a future website that I may design for myself or someone else one day. 
 
 You can read a bit about me [here](about.html).
