--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,13 @@ back-to-top-navigation: false
 :::{#about .animate__animated .animate__zoomInDown}
 Welcome to my website! This website serves as a personal website that can be a starting point for a future website that I may design for myself or someone else one day. 
 
-You can read a bit about me [here](about.html).
+Click the button below to read a bit about me!
+```{=html}
+<button type="button" class="btn btn-primary">
+    <a href="about.html">
+      Click Here!
+    </a>
+</button>
+```
 :::
 
