--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
 :::{#about}
 Welcome to my website! This website serves as a personal website that can be a starting point for a future website that I may design for myself or someone else one day. 
 
-Click the button below to read a bit about me!
+Click the button below to learn a bit about me!
 ```{=html}
 <button type="button" class="btn btn-primary">
     <a href="about.html">
