--- a/posts/2023-11-11-college-work/index.qmd
+++ b/posts/2023-11-11-college-work/index.qmd
@@ -14,7 +14,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at tristique turpis,
 
 Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id quam nec sapien scelerisque malesuada. Aliquam at augue ligula. Vestibulum feugiat, ligula ut eleifend commodo, lectus velit eleifend quam, in venenatis orci metus eu elit. Maecenas laoreet, quam nec fermentum vulputate, orci felis hendrerit justo, eu posuere purus justo id justo. Ut et massa vel dolor volutpat bibendum. Fusce ut malesuada nunc. Mauris scelerisque dui a lectus consequat, eget tempor mi vestibulum. Nam suscipit vel quam a hendrerit. Sed aliquam purus vitae tristique pellentesque. Vivamus congue elit in justo semper, vel viverra nulla sagittis. Aenean ac ultricies quam. Duis at magna auctor, feugiat nulla et, vulputate arcu. Nulla facilisi. Phasellus auctor vehicula justo, vel volutpat tortor fringilla vel.
 
-## Conclusion
+## Work
 
 Vestibulum dapibus, mauris nec malesuada fringilla, purus velit vehicula sem, vitae bibendum turpis elit ut lectus. Fusce vel nunc at ligula tristique varius. Phasellus vel diam eu libero luctus ultricies. Sed hendrerit libero in tortor bibendum facilisis. Ut vel justo vel urna ultrices dapibus. Integer in metus nec elit euismod dapibus. Quisque at turpis eu tellus fermentum consectetur.
 
