--- a/articles/article_03.qmd
+++ b/articles/article_03.qmd
@@ -36,7 +36,7 @@ In order for this code to work, I had to place it in the `style.css` folder. The
 
 ## Navbar Hover Color
 <blockquote>
-I was able to add the color oranage when hovering over the words on the navbar by adding the code below in my `style.css` folder. I reffered to the website as well as the Github page from Quarto below when trying to learn how to add a hover color:
+I was able to add the color orange when hovering over the words on the navbar by adding the code below in my `style.css` folder. I reffered to a website as well as the Github page from Quarto below:
 ```{=html}
 <button type="button" class="btn btn-primary">
     <a href="https://www.quora.com/How-do-I-change-the-background-color-on-a-hover-in-navbar">
