--- a/posts/2023-11-17-small-task/index.qmd
+++ b/posts/2023-11-17-small-task/index.qmd
@@ -4,7 +4,7 @@ description: "The addition of a logo and buttons."
 author:
   - name: Lexi Taylor
 date: "2023-11-17"
-categories: [enhancement, logo, button]
+categories: [substantive, logo, button]
 image: banner.jpg
 ---
 
